Loot table support

--- a/src/main/resources/assets/chestrefill/lang/messages.properties
+++ b/src/main/resources/assets/chestrefill/lang/messages.properties
@@ -11,7 +11,8 @@ command.setcontainername.desc=Set name for a refillable container
 command.setopenmessage.desc=Sets message that will be shown when refillable container will be opened
 command.createkit.desc=Toggles kit creation mode
 command.removekit.desc=Removes a kit
-command.assignkit.desc=Toggles assign mode
+command.assignkit.desc=Toggles kit assign mode
+command.assignloottable.desc=Toggles loot table assign mode
 command.kits.desc=Shows available kits
 command.searchandcreate.desc=Scans selected region and converts found containers to refillable containers
 command.setplaceitemsinrandomslots.desc=Toggles set-place-in-random-slots mode
@@ -31,6 +32,8 @@ command.setplaceitemsinrandomslots.turned-on=&eTurned on set place items in rand
 command.setplaceitemsinrandomslots.turned-off=&eTurned off set place items in random slots mode
 command.assignkit.turned-on=&eTurned on assign mode
 command.assignkit.turned-off=&eTurned off assign mode
+command.assignloottable.turned-on=&eTurned on assign mode
+command.assignloottable.turned-off=&eTurned off assign mode
 command.create.turned-on=&eTurned on creation mode
 command.create.turned-off=&eTurned off creation mode
 command.copy.turned-on=&eTurned on copy mode
@@ -42,7 +45,7 @@ command.createkit.error.kit-with-given-name-already-exists=Kit with given name a
 command.list.you-were-teleported-to-selected-container=&aYou were teleported to the selected container!
 command.list.container-name=&aContainer's name: &e{0}
 command.list.items-in-inventory=&aItems in inventory:
-command.list.kit=&aKit: &r{0}
+command.list.item-provider=&aItem-provider: &r{0} {1}
 command.list.place-items-in-random-slots=&aPlace items in random slots: &r{0}
 command.list.one-item-at-time=&aOne item at time: &r{0}
 command.list.replace-existing-items=&aReplace existing items: &r{0}
