Few small fixes

--- a/src/main/resources/assets/chestrefill/lang/messages.properties
+++ b/src/main/resources/assets/chestrefill/lang/messages.properties
@@ -43,7 +43,7 @@ command.createkit.turned-off=Turned off kit creation mode
 command.createkit.error.kit-with-given-name-already-exists=Kit with given name already exists!
 
 command.list.you-were-teleported-to-selected-container=&aYou were teleported to the selected container!
-command.list.container-name=&aContainer's name: &e{0}
+command.list.container-name=&aContainer name: &e{0}
 command.list.items-in-inventory=&aItems in inventory:
 command.list.item-provider=&aItem-provider: &r{0} {1}
 command.list.place-items-in-random-slots=&aPlace items in random slots: &r{0}
