Add SetHiddenIfNoItems Command

--- a/src/main/resources/assets/chestrefill/lang/messages.properties
+++ b/src/main/resources/assets/chestrefill/lang/messages.properties
@@ -16,6 +16,7 @@ command.assignloottable.desc=Toggles loot table assign mode
 command.kits.desc=Shows available kits
 command.searchandcreate.desc=Scans selected region and converts found containers to refillable containers
 command.setplaceitemsinrandomslots.desc=Toggles set-place-in-random-slots mode
+command.sethiddenifnoitems.desc=Toggles set-hidden-if-no-items mode
 command.deselect.desc=Clears selection points marked with ChestRefill's wand
 command.wand.desc=Gives ChestRefill wand
 
@@ -28,6 +29,8 @@ command.kits.padding-character=&2-
 command.kits.kit-name=&aKit's name: &e{0}
 command.kits.items-in-kit=&aItems in kit:  
 
+command.sethiddenifnoitems.turned-on=&eTurned on hidden if no items mode
+command.sethiddenifnoitems.turned-off=&eTurned off hidden if no items mode
 command.setplaceitemsinrandomslots.turned-on=&eTurned on set place items in random slots mode
 command.setplaceitemsinrandomslots.turned-off=&eTurned off set place items in random slots mode
 command.assignkit.turned-on=&eTurned on assign mode
