Added Info Command & muchos refactoros

--- a/src/main/resources/assets/chestrefill/lang/messages.properties
+++ b/src/main/resources/assets/chestrefill/lang/messages.properties
@@ -3,6 +3,7 @@ command.create.desc=Toggles container creation mode
 command.copy.desc=Toggles container copy mode
 command.remove.desc=Toggles container removal mode
 command.removeall.desc=Removes all refillable containers
+command.info.desc=Shows information about clicked container
 command.time.desc=Change container's refill time
 command.list.desc=Show all refilling container
 command.refill.desc=Force refill a specific container
@@ -26,9 +27,11 @@ command.help.padding-character=&2-
 
 command.kits.header=&6List of Kits
 command.kits.padding-character=&2-
-command.kits.kit-name=&aKit's name: &e{0}
+command.kits.kit-name=&aKit name: &e{0}
 command.kits.items-in-kit=&aItems in kit:  
 
+command.info.turned-on=&eTurned on info mode
+command.info.turned-off=&eTurned off info mode
 command.sethiddenifnoitems.turned-on=&eTurned on hidden if no items mode
 command.sethiddenifnoitems.turned-off=&eTurned off hidden if no items mode
 command.setplaceitemsinrandomslots.turned-on=&eTurned on set place items in random slots mode
