Added SetHidingBlockCommand + added more strings to lang file.

--- a/src/main/resources/assets/chestrefill/lang/messages.properties
+++ b/src/main/resources/assets/chestrefill/lang/messages.properties
@@ -18,6 +18,7 @@ command.kits.desc=Shows available kits
 command.searchandcreate.desc=Scans selected region and converts found containers to refillable containers
 command.setplaceitemsinrandomslots.desc=Toggles set-place-in-random-slots mode
 command.sethiddenifnoitems.desc=Toggles set-hidden-if-no-items mode
+command.sethidingblock.desc=Toggles set-hiding-block mode
 command.deselect.desc=Clears selection points marked with ChestRefill's wand
 command.wand.desc=Gives ChestRefill wand
 
@@ -40,13 +41,24 @@ command.assignkit.turned-on=&eTurned on assign mode
 command.assignkit.turned-off=&eTurned off assign mode
 command.assignloottable.turned-on=&eTurned on assign mode
 command.assignloottable.turned-off=&eTurned off assign mode
+
 command.create.turned-on=&eTurned on creation mode
 command.create.turned-off=&eTurned off creation mode
+command.create.successful-create=&aSuccessfully created a refilling container!
+
 command.copy.turned-on=&eTurned on copy mode
 command.copy.turned-off=&eTurned off copy mode
+command.copy.now-select-new-container=&aNow select a new container that should behave in the same way!
+command.copy.successful-copy=&aSuccessfully copied a refilling container!
+command.copy.error.same-type-required=&cContainers must be of the same type!
+
 command.createkit.turned-on=Turned on kit creation mode
 command.createkit.turned-off=Turned off kit creation mode
+command.createkit.successfuly-create=&aSuccessfully created a kit!
 command.createkit.error.kit-with-given-name-already-exists=Kit with given name already exists!
+
+command.hidingblock.turned-on=Turned on set hiding block mode
+command.hidingblock.turned-off=Turned off set hiding block mode
 
 command.list.you-were-teleported-to-selected-container=&aYou were teleported to the selected container!
 command.list.container-name=&aContainer name: &e{0}
@@ -70,10 +82,12 @@ command.refill.failure=Could not refill the container!
 command.refillall.success=&eSuccessfully refilled all containers!
 command.refillall.failure=Some containers could not be refilled.
 command.removeall.success=&eAll containers have been removed!
+
 command.remove.turned-on=&eTurned on removal mode
 command.remove.turned-off=&eTurned off removal mode
+command.remove.successful-remove=&aSuccessfully removed a refilling container!
+
 command.removekit.success=&aSuccessfully removed the kit!
-command.removekit.failure=Something went wrong...
 command.removekit.error.kit-does-not-exist=Kit with given name does not exist!
 command.update.turned-on=&eTurned on update mode
 command.update.turned-off=&eTurned off update mode
@@ -91,4 +105,7 @@ command.wand.wand-name=&6ChestRefill Wand
 command.wand.wand-lore.line1=Select first point with your &6left click.
 command.wand.wand-lore.line2=Select second point with your &6right click.
 
-error.command.in-game-player-required=Only in-game players can use this command!
+command.successful-refillable-container-update=Successfully updated refillable container!
+
+error.command.in-game-player-required=&cOnly in-game players can use this command!
+error.command.something-went-wrong=&cSomething went wrong...
