Added indestructibility flag for container

--- a/src/main/resources/assets/chestrefill/lang/messages.properties
+++ b/src/main/resources/assets/chestrefill/lang/messages.properties
@@ -21,6 +21,7 @@ command.sethiddenifnoitems.desc=Toggles set-hidden-if-no-items mode
 command.sethidingblock.desc=Toggles set-hiding-block mode
 command.deselect.desc=Clears selection points marked with ChestRefill's wand
 command.wand.desc=Gives ChestRefill wand
+command.setindestructibility.desc=Toggles container destructibility
 
 command.help.header=&6Chest Refill v {0}
 command.help.usage=&7Usage:
@@ -60,6 +61,9 @@ command.createkit.error.kit-with-given-name-already-exists=Kit with given name a
 command.hidingblock.turned-on=Turned on set hiding block mode
 command.hidingblock.turned-off=Turned off set hiding block mode
 
+command.indestructibility.turned-on=Turned on container indestructibility
+command.indestructibility.turned-off=Turned off container indestructibility
+
 command.list.you-were-teleported-to-selected-container=&aYou were teleported to the selected container!
 command.list.container-name=&aContainer name: &e{0}
 command.list.items-in-inventory=&aItems in inventory:
@@ -76,6 +80,7 @@ command.list.unnamed-container-at-location= - Unnamed container &2at location &e
 command.list.container-at-location= - Container &e{0} &2at location &e{1}
 command.list.header=&6List of Refilling Containers
 command.list.padding-character=&2-
+command.list.indestructible=&aIndestructible: &r{0}
 command.deselect.selection-points-cleared-out=&aSelections points have been cleared out!
 command.refill.success=&eSuccessfully refilled the container!
 command.refill.failure=Could not refill the container!
